--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,11 @@ body{
 	text-align:center;
 	color:white;
 	padding:20px;
-	background-color : #011e29
+	background-color : #011e29;
 }
 .body-container{
 	display:flex;
+	padding:10px;
 	
 }
 .latest-news-section{
@@ -29,7 +30,15 @@ body{
 	text-align:center;
 	background-color:#fefffe;
 	padding:10px;
-	border-radius:30px;
 	display:inline-block
+	
+}
+.pictorial-news-section img{
+	width:200px;
+	height:150px;
+	display:inline-block;
+	padding:10px;
+	border-radius:10px;
+
 	
 }
